Fix scroller always visible in side menu

--- a/src/components/app/style.css
+++ b/src/components/app/style.css
@@ -68,6 +68,7 @@
   overflow: hidden;
   overflow-y: scroll;
   padding-right: 10px;
+  height: 100%;
 }
 
 .app > nav.side ul > :not(:first-child) {
